# Rust-Wasm-Hello-World

./: Cargo.toml  README.md  index.html  package.json
pkg/: README.md  package_hide.json  wasm_hello_world.js  wasm_hello_world_bg.wasm  wasm_rust_playground.d.ts  wasm_rust_playground.js  wasm_rust_playground_bg.wasm  wasm_rust_playground_bg.wasm.d.ts
src/: lib.rs
src/javascript/: index.js
src/rust/: canvas.rs  game.rs  movingObject.rs  shared.rs
src/rust/utility/: geometry_utils.rs  mod.rs  shader_utils.rs
