[package]
name = "wasm_rust_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window"] }
js-sys = "0.3"
glow = "0.10"
cgmath = "0.17"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib"]
